fixed for viewing on mobile viewport

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
-html,
+/* html,
 body{
   *height: calc(100vh - 50px);
   *width:100%
+} */
+
+html {
+  background: linear-gradient(122.18deg, #FFEAD7 8.01%, #BCE3FF 95.95%);
+  background-size: cover;
+  *min-height: calc:(100vh * 1.1);
 }
 
 @font-face {
@@ -27,18 +33,6 @@ body{
   font-style: italic;
   font-weight: normal;
   src: url("fonts/GTAmerica-RegularItalic.woff");
-}
-
-article {
-  display: grid;
-  min-height: 100%;
-  width: calc(100vw - 72px);
-  margin-left: 36px;
-  /* margin-top: 36px; */
-  margin-bottom: 100px;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: 0.2rem;
-  grid-template-rows: auto 1fr auto;
 }
 
 h1 {
@@ -83,13 +77,42 @@ footer a {
 a:hover {
     font-style: normal;
     text-decoration: underline;
-  }
+}
 
 footer a:hover {
     color: black;
     font-style: normal;
     text-decoration: none;
-  }
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  *background: linear-gradient(90deg, #FFEAD7 8.01%, #BCE3FF 95.95%);
+  overflow-x: hidden;
+  *overflow-y: hidden;
+  margin: 0 auto 0;
+
+  /*window.innerHeight: calc(100vh - 100px);*/
+  font-family: GTAmerica;
+  font-size: 24px;
+  letter-spacing: -0.035em;
+  line-height: 29px;
+}
+
+article {
+  display: grid;
+  *min-height: 100%;
+  width: calc(100vw - 72px);
+  margin-left: 36px;
+  /* margin-top: 36px; */
+  margin-bottom: 50px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 0.2rem;
+  grid-template-rows: auto 1fr auto;
+
+}
 
 header {
   -webkit-font-smoothing: antialiased;
@@ -105,49 +128,34 @@ main {
   grid-row: 2;
  	*background: white;
   z-index: 2;
-}
+  align-self: end;
 
-  /* #thumbnail {
-  grid-column: 3/10;
-  grid-row: 2;
-  min-height: 450px;
-  background: linear-gradient(122.18deg, #FFEAD7 8.01%, #BCE3FF 95.95%);
-  background-position: center center;
-} */
-
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  background: linear-gradient(122.18deg, #FFEAD7 8.01%, #BCE3FF 95.95%);
-
-  /*window.innerHeight: calc(100vh - 100px);*/
-  font-family: GTAmerica;
-  font-size: 24px;
-  letter-spacing: -0.035em;
-  line-height: 29px;
-  *background-color: lightgrey;
-  *overflow: hidden; /* Hide scrollbars */
+  margin-bottom: 50px;
 }
 
 footer {
-  position: absolute;
-  bottom: 50px;
+  grid-column: 1/2;
+  grid-row: 3;
+  *background: #ffead7;
+  z-index: 2;
+  *align-self: end;
+
+  *position: fixed;
+  *bottom: 50px;
 
   font-family: GTAmerica;
   font-size: 18px;
   letter-spacing: normal;
   line-height: 1.2em;
-
-  grid-column: 1/13;
-  grid-row: 4;
-  *background: #ffead7;
-  z-index: 2;
-  align-self: end;
-
+  text-align: left;
 }
 
 @media only screen and (max-width: 1000px) {
+  html {
+    background: linear-gradient(122.18deg, #FFEAD7 8.01%, #BCE3FF 95.95%);
+    min-height: calc(1.1*100vh);
+  }
+
   h1 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -170,7 +178,8 @@ footer {
   }
 
   article {
-    min-height: calc(100vh - 100px);
+    *min-height: calc(100vh - 100px);
+    min-height: auto;
     grid-template-columns: 1fr 1fr;
     grid-gap: 0.2rem;
     grid-template-rows: auto 1fr auto;
@@ -197,8 +206,18 @@ footer {
     grid-row: 2;
   }
 
+  footer {
+    grid-column: 1/3;
+    grid-row: 3'
+  }
+
 
 @media only screen and (max-width: 768px) {
+  html {
+    background: linear-gradient(122.18deg, #FFEAD7 8.01%, #BCE3FF 95.95%);
+    min-height: calc(1.1*100vh);
+  }
+
   h1 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -221,22 +240,28 @@ footer {
   }
 
   article {
-    min-height: calc(100vh - 100px);
+    *min-height: calc(100vh - 100px);
+    min-height: auto;
     grid-template-columns: 1fr;
     grid-gap: 0.2rem;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 1fr;
   }
 
   header {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    height: 80px;
+    *height: 80px;
 
-    grid-column: 1/3;
+    grid-column: 1;
     grid-row: 1;
   }
 
   body {
     font-family: 'GTAmerica';
     font-size: 20px;
+  }
+
+  footer {
+    grid-column: 1;
+    grid-row: 3'
   }
